--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,7 @@
         </activity>
         <activity
             android:name=".ui.SecondActivity"
-            android:process=":f">
+            android:process=":ysw">
 
         </activity>
     </application>
