提交快进程通讯相关文件

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,6 +24,8 @@
             android:process=":ysw">
 
         </activity>
+
+        <service android:name=".service.RxBusService" />
     </application>
 
 </manifest>
