--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,7 +25,7 @@
 
         </activity>
 
-        <service android:name=".service.RxBusService" />
+        <service android:name=".service.HermesService" />
     </application>
 
 </manifest>
